<resources>
    <string name="app_name">Prueba Tècnica Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Title_Secondary">Somos Integradores de Soluciones, Haciendo un Mundo más fácil y trazable</string>

    <!-- TODO: String del Login -->
    <string name="nroDocumento">Nro. Documento</string>
    <string name="pass">Contraseña</string>
    <string name="etDocumento">  Ejemplo: 123456</string>
    <string name="recordar_usuario">Recordar usuario</string>
    <string name="olvide_mi_contrase_a">Olvidé mi contraseña</string>
    <string name="alliotec">Alliotec</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="nro_de_documento">Nro de documento:</string>
    <string name="contrase_a">Contraseña</string>
    <string name="_123456">123456</string>
</resources>